# Fremkit

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
aqueduc/: 01-world.py  Cargo.toml
aqueduc/src/: aqueduc.rs  droplet.rs  lib.rs
aqueduc/src/com/: mod.rs  program.rs
benches/: bounded.rs  performance.rs  unbounded.rs
canal/: Cargo.toml
canal/benches/: log.rs  performance.rs  trial.rs
canal/examples/: multi_thread_append.rs  single_thread_append.rs
canal/examples/trial/: main.rs
canal/src/: canal.rs  error.rs  lib.rs  list.rs  log.rs  sync.rs  trial.rs
canal/src/sync/: cooldown.rs  mod.rs  notifier.rs
canal/tests/: test_canal.rs  test_notifier.rs  test_trial.rs
examples/: multi_thread_append.rs  single_thread_append.rs
fremkit-channel/: Cargo.toml  README.md
fremkit-channel/benches/: bounded.rs  channel.rs  unbounded.rs
fremkit-channel/examples/: multi_thread_append.rs  single_thread_append.rs
fremkit-channel/src/: channel.rs  lib.rs  log.rs  sync.rs
fremkit-channel/src/channel/: bounded.rs  unbounded.rs
fremkit-channel/src/types/: list.rs  notifier.rs
fremkit-macro/: Cargo.toml
fremkit-macro/src/: lib.rs
fremkit-maker/: Cargo.toml  README.md
fremkit-maker/src/: error.rs  helpers.rs  lib.rs  main.rs  setup.rs
fremkit-maker/src/core/: snapshot.rs  state.rs
fremkit-maker/src/net/: client.rs  server.rs
fremkit-maker/src/protocol/: command.rs  message.rs  mod.rs  query.rs
fremkit_channel/: Cargo.toml
fremkit_channel/src/: notifier.rs
paracompass/: Cargo.toml
paracompass/benches/: log.rs
paracompass/examples/: multi_thread_append.rs  single_thread_append.rs
src/: actor6.rs  error.rs  lib.rs  sync.rs
src/channel/: bounded.rs  unbounded.rs
src/core/: canal.rs  droplet.rs  mod.rs
src/log/: bounded.rs  error.rs  mod.rs
src/sync/: mod.rs  notifier.rs
src/types/: error.rs  list.rs  mod.rs  notifier.rs
