[package]
name = "aqueduc"
version = "0.1.0"
edition = "2018"
authors = ["Quentin Leffray <fiahil@gmail.com>"]
description = "A simple way to connect tasks with each other"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "^4.0"
env_logger = "^0.9"
lazy_static = "^1.4"
log = "^0.4"
parking_lot = "^0.11"
thiserror = "^1.0"
