[package]
name = "aqueduc"
version = "0.1.0"
edition = "2021"
authors = ["Quentin Leffray <fiahil@gmail.com>"]
description = "A simple way to connect tasks with each other"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
canal = { path = "../canal" }
env_logger = "^0.9"
log = "^0.4"
thiserror = "^1.0"

[lib]
bench = false
