[package]
name = "fremkit-macro"
version = "0.1.0"
edition = "2021"
authors = ["Quentin Leffray <fiahil@gmail.com>"]
description = "Utility macros for Fremkit modules"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.81", features = ["full"] }
quote = "1.0.10"
